--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,20 +1,21 @@
 <div class="navbar-wagon">
   <!-- Logo -->
-  <%= link_to root_path, class: "navbar-wagon-brand" do %>
-    <%= image_tag "logo.png" %>
-  <% end %>
+  <div class="inline">
+    <%= link_to root_path, class: "navbar-wagon-brand" do %>
+      <%= image_tag "logo.png" %>
+    <% end %>
 
-  <!-- Search form -->
-  <form action="" class="navbar-wagon-search">
-    <input type="text" class="navbar-wagon-search-input" placeholder="Search something">
-    <button type="submit" class="navbar-wagon-search-btn">
-      <i class="fa fa-search"></i>
-    </button>
-  </form>
-
+    <!-- Search form -->
+    <form action="" class="navbar-wagon-search">
+      <input type="text" class="navbar-wagon-search-input" placeholder="Search something">
+      <button type="submit" class="navbar-wagon-search-btn">
+        <i class="fa fa-search"></i>
+      </button>
+    </form>
+  </div>
   <!-- Right Navigation -->
+  <div>
   <div class="navbar-wagon-right hidden-xs hidden-sm">
-
 
     <!-- Different navigation if login or not -->
     <% if user_signed_in? %>
@@ -61,6 +62,7 @@
 
     <!-- Button (call-to-action) -->
     <%= link_to t(".top_call_to_action", default: "Add material"), "#", class: "navbar-wagon-item navbar-wagon-button btn" %>
+  </div>
   </div>
 
   <!-- Dropdown list appearing on mobile only -->
