--- a/app/views/shared/_banner.html.erb
+++ b/app/views/shared/_banner.html.erb
@@ -1,9 +1,15 @@
 <div class="cover">
-  <div class="banner" style="background-image: linear-gradient(-225deg, rgba(0,101,168,0.6) 0%, rgba(0,36,61,0.6) 50%), url('home.jpg');">
+  <div class="banner" style="background-image: linear-gradient(-225deg, rgba(0,101,168,0.6) 0%, rgba(0,36,61,0.6) 50%), url('https://images.unsplash.com/photo-1453745558060-956d4c4deff8?dpr=2&auto=format&fit=crop&w=1500&h=1125&q=80&cs=tinysrgb&crop=');">
     <div class="banner-content">
-      <h1>Some Stuff</h1>
-      <p>Very cool stuff, useful and smart</p>
-      <a class="btn btn-primary btn-lg">GET IT</a>
+    <h2>Find cool gear near your place</h2>
+      <form id="searchbox" action="">
+      <input id="search" type="text" placeholder="Ski, Snow, Sledge, ...">
+      <input id="search" type="text" placeholder="Where">
+      <input id="search" type="text" placeholder="Start On">
+      <input id="search" type="text" placeholder="End On">
+      <input id="submit" type="submit" value="Search" class="btn btn-primary btn-lg">
+      </form>
+      </div>
     </div>
   </div>
 </div>
