--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -8,7 +8,7 @@
       <%- resource_class.omniauth_providers.each do |provider| %>
       <%= link_to omniauth_authorize_path(resource_name, provider), class: "btn btn-facebook" do %>
         <span class="fa fa-facebook"></span>
-        Connect with <%= OmniAuth::Utils.camelize(provider) %>
+        Sign up with <%= OmniAuth::Utils.camelize(provider) %>
         <% end %>
         <br />
         <% end -%>
