first update to item show page and controller

--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -1,2 +1,14 @@
-<h1>Items#show</h1>
-<p>Find me in app/views/items/show.html.erb</p>
+<div class="container">
+  <h1><%= @item.title %>
+
+  <div class="media">
+    <div class="media-body">
+      <div class="media-section">
+       <%= image_tag @item.picture_url %>
+      </div>
+      <div class="media-section">
+      <%= item.
+    </div>
+    </div>
+  </div>
+</div>
