--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,2 +1,10 @@
-<h1>Users#show</h1>
-<p>Find me in app/views/users/show.html.erb</p>
+<div class="container">
+  <div class="row">
+    <div class="col-sm-6">
+      <%= @user.first_name %>
+    </div>
+    <div class="col-sm-6">
+
+    </div>
+  </div>
+</div>
