--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -1,9 +1,11 @@
 <div class="container">
   <h1>Les résultats de votre recherche</h1>
   <div class="row">
+  <div class="col-sm-6">
     <% @items.each do |item| %>
+    <div class="col-sm-6">
       <% if item.picture_url? %>
-        <div class="col-sm-6 col-md-4">
+       <% item.picture_url = 'https://images.unsplash.com/photo-1453745558060-956d4c4deff8?dpr=2&auto=format&fit=crop&w=300&h=175&q=80&cs=tinysrgb&crop=' %>
          <%= link_to item_path(item) do  %>
           <div class="card" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url('<%= item.picture_url %>')">
             <div class="card-category">
@@ -15,41 +17,31 @@
             </div>
           </div>
         <% end %>
-      </div>
-      <% else %>
-      <div class="col-sm-6 col-md-4">
-      <%= link_to item_path(item) do  %>
-        <div class="card" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url('https://images.unsplash.com/photo-1453745558060-956d4c4deff8?dpr=2&auto=format&fit=crop&w=300&h=175&q=80&cs=tinysrgb&crop=')">
-          <div class="card-category">
-            <h2><%= item.title %></h2>
-            <p>Category : <%= item.material_category %></p>
-            <p>For : <%= item.segment %></p>
-            <p>Station : <%= item.ski_station %></p>
-            <p>Price per day : <%= item.price %></p>
-          </div>
-          </div>
         <% end %>
         </div>
-      <% end %>
-    <% end %>
-  </div>
+        <% end %>
+    </div>
 
-  <div id="map" style="width: 100%; height: 600px;"></div>
-  <% content_for(:after_js) do %>
-  <%= javascript_tag do %>
-    $(document).ready(function() {
-      var handler = Gmaps.build('Google');
-      handler.buildMap({ internal: { id: 'map' } }, function() {
-        markers = handler.addMarkers(<%= raw @hash.to_json %>);
-        handler.bounds.extendWith(markers);
-        handler.fitMapToBounds();
-        if (markers.length == 0) {
-          handler.getMap().setZoom(2);
-        } else if (markers.length == 1) {
-          handler.getMap().setZoom(14);
-        }
-      });
-    });
-  <% end %>
-<% end %>
+    <div class="col-sm-6">
+      <div id="map" style="width: 100%; height: 600px;">
+        <% content_for(:after_js) do %>
+        <%= javascript_tag do %>
+          $(document).ready(function() {
+            var handler = Gmaps.build('Google');
+            handler.buildMap({ internal: { id: 'map' } }, function() {
+              markers = handler.addMarkers(<%= raw @hash.to_json %>);
+              handler.bounds.extendWith(markers);
+              handler.fitMapToBounds();
+              if (markers.length == 0) {
+                handler.getMap().setZoom(2);
+              } else if (markers.length == 1) {
+                handler.getMap().setZoom(14);
+              }
+            });
+          });
+        <% end %>
+      <% end %>
+    </div>
+    </div>
+  </div>
 </div>
