Update link on search button on home for demo

--- a/app/views/shared/_banner.html.erb
+++ b/app/views/shared/_banner.html.erb
@@ -7,7 +7,7 @@
       <input id="search" type="text" placeholder="Where">
       <input id="search" type="text" placeholder="Start On">
       <input id="search" type="text" placeholder="End On">
-      <input id="submit" type="submit" value="Search" class="btn btn-primary btn-lg">
+      <%= link_to "Search", items_path, { class: "btn btn-primary btn-lg" }%>
       </form>
       </div>
     </div>
