--- a/app/views/items/new.html.erb
+++ b/app/views/items/new.html.erb
@@ -1,2 +1,5 @@
-<h1>Items#new</h1>
-<p>Find me in app/views/items/new.html.erb</p>
+
+<div class="container">
+  <h1> Put your advert online </h1>
+<%= render 'shared/itemform' %>
+</div>
