--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -1,5 +1,8 @@
 <div class="container">
   <h1><%= @item.title %></h1>
+  <% if @item.user.id == current_user.id %>
+  <span><%= link_to "Delete this item", item_path(@item), method: :delete, data: {confirm: "Do you really want to delete this item?"}, class: "btn btn-danger" %></span>
+  <% end %>
    <% ratings = @item.reservations.pluck(:user_rating) %>
    <% ratings = ratings.select { |rating| rating != nil} %>
    <%= average_stars(ratings) if ratings.any? %>
