--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -26,10 +26,11 @@
     </div>
 
     <div class="media-section">
-    <% if @item.reservations.any? %>
       <h3>Last reviews</h3>
+      <% end %>
       <ul>
         <% @item.reservations.each do |reservation| %>
+        <% if reservation.user_review.present? %>
           <li>
             <%= star(reservation.user_rating) if reservation.user_rating != nil %>
             <%= reservation.user_review %> by <%= reservation.user %>
